--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,7 @@
 
   <script>
 
-   Tetris(document.getElementById('app'), { 
-     content: `
+   const fixtures = `
 # This is a header
 This is a paragraph. Embed chess notation like <1. e3 e6 2. Nf3 Nf6 3. d3> 
 Continue paragraph. Continue from black's move <3... d6 4. a3 a6> 
@@ -97,7 +96,11 @@ Embed variation lines <main2 main 3. d4 d5 4. a3 a6> . "main2" is variation name
 Make sure to put a space at beginning and end of lines <main3 main 3. d4> .
 
 Happy blogging
-     `,
+     `;
+
+
+   Tetris(document.getElementById('app'), { 
+     content: ,
      input(_) {
        console.log(_);
      }});
