--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 
   <script>
 
-   const fixtures = `
+   const content = `
 # This is a header
 This is a paragraph. Embed chess notation like <1. e3 e6 2. Nf3 Nf6 3. d3> 
 Continue paragraph. Continue from black's move <3... d6 4. a3 a6> 
@@ -100,9 +100,9 @@ Happy blogging
 
 
    Tetris(document.getElementById('app'), { 
-     content: ,
+     content,
      input(_) {
-       console.log(_);
+       // console.log(_);
      }});
    
   </script>
